--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,7 @@ spring:
 graphql:
   packages:
     - com.nicovogelaar.playground
+
+jwt:
+  secretKey: your-secret-key-your-secret-key
+  validityInMs: 3600000 # 1 hour
